small fixes for height on boxes and wrapping icon

--- a/web/sites/default/themes/ubnext/less/navigation-landing.less
+++ b/web/sites/default/themes/ubnext/less/navigation-landing.less
@@ -1,6 +1,6 @@
 .main-cms {
   // Remove?
-  @boxes-min-height: 230px;
+  @boxes-min-height: 180px;
 
   .mixin-indicator {
     font-size: 12px;
@@ -96,6 +96,7 @@
               top: -2px;
               left: 8px;
               display: inline-block;
+              margin-right: -24px;
               font-size: 12px;
             }
           }
